# totk-mod-manager-for-switch-emulators

./: .env  .eslintrc.json  .prettierignore  LICENSE  README.md  SECURITY.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  wdio.conf.js
.github/: FUNDING.yml  thank-you.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml
.github/workflows/: beta-release.yml  build.yml  configuration.json  defender-for-devops.yml  node.js.yml  release.yml  virus-total.yml
.husky/: compare-version.js  pre-push
app/: alert.tsx  appContext.tsx  categories.tsx  downloadBar.tsx  emulatorChoiceContext.tsx  enum.tsx  fetchGithubUpdatedMods.tsx  fetchYuzuMods.tsx  globals.css  header.tsx  layout.tsx  listmods.tsx  localModRow.tsx  modContext.tsx  modHandler.tsx  modRow.tsx  modsTable.tsx  not-found.tsx  page.tsx  types.tsx
app/(emulators)/: emulatorPage.tsx  header.tsx  modRow.tsx  modsTable.tsx
app/(handler)/: errorHandler.tsx  fetchGithubUpdatedMods.tsx  fetchYuzuMods.tsx  listmods.tsx  modHandler.tsx  yuzuHandler.tsx
app/emulators/: emulatorPage.tsx  header.tsx  layout.tsx  localModRow.tsx  modRow.tsx  modsTable.tsx
app/emulators/[name]/: gamebananaModRow.tsx  header.tsx  (+4 more)
app/yuzu/: downloadBar.tsx  header.tsx  localModRow.tsx  modContext.tsx  modRow.tsx  modsTable.tsx  page.tsx
docs/: CONTRIBUTING.md  LICENSE.md  README.md  _config.yml
src/: enum.tsx  gamebanaApi.tsx  types.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/context/: modContext.tsx
src/gamebanana/: types.tsx
src/handler/: debugHandler.tsx  emulatorHandler.tsx  errorHandler.tsx  fetchGithubUpdatedMods.tsx  fetchMods.tsx  fetchYuzuMods.tsx  listmods.tsx  localModHandler.tsx  modHandler.tsx  yuzuHandler.tsx
test/specs/: example.e2e.js
(+3 files in other folders)
