[package]
name = "app"
version = "0.8.4"
description = "Mod Manager designed to assist players of Zelda: Tears of the Kingdom on the Yuzu emulator in managing mods for the game."
authors = ["vasilvestre"]
license = ""
homepage = "https://github.com/vasilvestre/totk-mod-manager-for-yuzu"
repository = "https://github.com/vasilvestre/totk-mod-manager-for-yuzu"
keywords = ["emulation","zelda","mod"]
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["dialog-open", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-write-file", "path-all", "process-exit", "process-relaunch", "updater"] }
#tauri = { features = ["fs-exists", "fs-read-dir", "fs-read-file", "fs-write-file", "path-all"], path = "../../tauri/core/tauri" }
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
thiserror = "1"
zip-extract = "0.1"
fs_extra = "1.3"
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-aptabase = "0.2"
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
